Fix lineup infinite loading on mobile web

--- a/packages/web/src/pages/App.module.css
+++ b/packages/web/src/pages/App.module.css
@@ -30,9 +30,9 @@ body {
   overflow: hidden;
 }
 
-.mobileApp {
+.app.mobileApp {
   min-width: var(--mobile-min-width);
-  overflow: auto;
+  overflow: visible;
 }
 
 .notificationWrapper {
